--- a/Chatbot/package.json
+++ b/Chatbot/package.json
@@ -12,17 +12,19 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "tslib": "2.3.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "office-ui-fabric-react": "^7.199.1",
     "@fluentui/react": "^7.199.1",
-    "@microsoft/sp-core-library": "1.17.4",
+    "@microsoft/load-themed-styles": "^2.0.90",
     "@microsoft/sp-component-base": "1.17.4",
+    "@microsoft/sp-core-library": "1.17.4",
+    "@microsoft/sp-lodash-subset": "1.17.4",
+    "@microsoft/sp-office-ui-fabric-core": "1.17.4",
     "@microsoft/sp-property-pane": "1.17.4",
     "@microsoft/sp-webpart-base": "1.17.4",
-    "@microsoft/sp-lodash-subset": "1.17.4",
-    "@microsoft/sp-office-ui-fabric-core": "1.17.4"
+    "office-ui-fabric-react": "^7.199.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "tslib": "2.3.1",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-4.5": "0.5.0",
