--- a/Chatbot/package.json
+++ b/Chatbot/package.json
@@ -20,6 +20,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.17.4",
     "@microsoft/sp-property-pane": "1.17.4",
     "@microsoft/sp-webpart-base": "1.17.4",
+    "adaptivecards": "^3.0.2",
     "office-ui-fabric-react": "^7.199.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
